# kolme

./: .dockerignore  .env  .env.dockerfile  .git-cliff.toml  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  contract-test-list.txt  flake.nix  justfile  start-demo-simple.sh  stress-test-list.txt  test-skip-list.txt  tombi.toml
.cargo/: config.toml
.ci/: build-contracts.sh  build-docs.sh  build-optimizer-image.sh
.config/: nextest.toml
.github/: ci.yml
.sqlx/: query-00efd18a5296caa5d1ef26cbde0c9e1e1588caee503245fee217b93bf55ccb33.json  query-0861d6e7034e9f17460d67b91c8c1f9955914e173332be7d5dcfc5ba4751a1e0.json  query-0fcb2fbc68c03ef940a654a7f04c540f24a2fac8f78c69b76d1368a43e20b88f.json  query-21502a00f28edf0a72284005b2d4ead68fba7fbf7dfcb71f8a3fa64339a7fca6.json  query-29982057c789e5587eaedfb11e8f0572d0d65be906086e6d6895579e038ffa80.json  query-2d04010f07ce8e6ef043a718fec3a52a42e8b82d1adc73ec5da0d8375a14e427.json  query-3c75445fc9e51bc799981cc533f90441f477856f0ba0523a8dd021fee75ed99c.json  query-3e6f0567f861596f3c2b29a4392bc43cb9f73f32f9a1f5790c9671c5d70cbfee.json  query-419eb332a60184eea878a94fbb3013c526f010f7d295d5c41b3382722fc7c315.json  (+31 more)
contracts/cosmos/: Cargo.toml
contracts/cosmos/src/: lib.rs  signing.rs
cosmos/: Cargo.toml  justfile
cosmos/src/: lib.rs  signing.rs
cosmos/tests/: signing.rs
demo/: zkp-backend-server.js
docs/: book.toml
integration-tests/: Cargo.toml
integration-tests/docker-resources/localosmosis/: setup.sh
integration-tests/tests/: six-sigma.rs  testapp.rs  tests.rs
integration-tests/tests/six_sigma/: types.rs
kolme/: .gitignore  Cargo.toml  TODO.md
kolme/.sqlx/: query-03966f20f223587ebd70ba864f359c38a9c104d85eb5c9a5fd64fb0f7012397e.json  query-04612f9a5637ce5e43b6630e393a6638e051aec4b15399689879bafdc29a2695.json  query-0b7bd09477e96f83f15ff6da7976d1849289747765dd82a8e73304a82cd69d7e.json  query-0e7f5a8c2fbccfaf54a71050bc2f780f3e96557ed9559d722f0021550c0ab2a6.json  query-10ea133abaadb407b02cf71bc597431f102cfa20d5092adbf6a236a442fa36c7.json  query-167dec948f5b3455b5cc797e6b1b16578fc860b121e3fd8684e2c37c882302fe.json  query-1d89167d463ba8f681e2ce1380f4ae494b7436effb9f058ce47978c3fc5dffef.json  query-1e23b84c709230682bc355af538adc607c07a1c22b05afed774853ffc1d24ad6.json  query-1efff7f3621996fa6cb4ea3f7b58619e851d5ac7373f271e49af8c769cb46ead.json  query-387fe46ddcb00d78300567f37ed907e03b50c9ce0c84b897e8995477ac0d86e4.json  query-3f3c9f9eb4120868ffe353fe5e2484d0551addf86aea8f305da691bb56e888ea.json  query-40e2d2dc301e6771b663b43fb0a299faa127c723c27540aa7889d45d523ff9b7.json  query-437141ae83ca4c81e89f767a91fa1b8d8aafee08fb9688f6a366a0092526c529.json  query-44dceac360657cf92bccc440a83ce72d48ee4efd22836a947be377726b53f648.json  query-4622603208026cb57faff79fa7e721d0422d3f81e2ade9b6f4e3e79a31540178.json  query-512bc9c852d45d731f5f334488288c7ecb93dc186a86bce8541300e09cfc9f62.json  query-54f0d5f692caaa75e5002d2f22fd1584df4656e86ff8e95e4e95f6988a592ace.json  query-5acd83d9a8e98eb3ca7241a9b6af679b84001052749b86e924befd0941ef65b0.json  query-707966bb5785ea63c82caf36d69625c2a06e16e9771f56927146cc2ac44ec4a4.json  query-7323196e95e2071a49a8c1013e7f3646f2b4e8ef8c049ff1e63c3691e7fedf56.json  query-808836a781a9dd07a285eb9e956a291fce5a6837f9b38b490092aab1d264dcb5.json  query-8a6f71640cc1cb2691b4ec424bb1f428f5919a7e03f38eb47046117a05201a9e.json  query-941941e2716036f4aac28c22e9082a8f5ad86c9f7c5d1f08adc7e50a311f192a.json  query-9a89ddfd5f34f9effab70952e20a10aab93b005c12ba67045a1c79315ab80124.json  query-a4d6b517944751fe0efe47f1f7ad3ec762629090098bc19b9c5ade66bea33fad.json  query-a8ddab4f6b60e3c62f983485968d2d9042920f6be18a5b67a94dd0f3fe609901.json  query-ad4414af43f4ee458bb325721c6fef523de2313ee17a2d68bef83e9deaf51f45.json  query-ad71c18080764f295d630e4a325c0001eec65323f051118bc2deb08cfe9f880a.json  query-adfc583fcccbfc9b6cedf1e81e23c466cadc6fb195bf20cc356b6752a3646b7e.json  query-b223dbe85ba030af2bc4cd4a4d0c6e26bcf599a4689e6a60a94ff6024643357a.json  query-b285d2b5d8aadf008b5cbdd1e3b02b6aeb0256c5b27db0dc3243380a0ef8a8ce.json  query-c3168ef698cd399723fa6eaab1cdacb0f3724da77ceed397386b3f92c0ca1ef9.json  query-cc023d15693fbbf3a9c69d69dae995cbc52dc475bedc1c790473b1b686916cc3.json  query-e54880c828b9fa03c44ed07ad4022dbe94f2e1798ae2f8b02a6cd9f8dc161c5a.json  query-f5f0a363fec1369afc8c7c95d91256cd4c8ad80ea28f429d5ffb75b5c134144b.json  query-fca18242975d920161d9641f2eafaf1d28e1a7ebb3911001bb75eb2d53fe90ba.json
kolme/docs/: book.toml
kolme/examples/: cosmos-bridge.rs  p2p.rs  six-sigma.rs
kolme/examples/six_sigma/: state.rs  types.rs
kolme/migrations/: 1_initialize.up.sql
kolme/src/: api_server.rs  app.rs  cli.rs  common.rs  event.rs  execute.rs  executor.rs  framework_state.rs  gossip.rs  kolme.rs  lib.rs  listener.rs  processor.rs  state.rs  submitter.rs  types.rs  utils.rs
kolme/src/core/: execute.rs  kolme.rs  kolme_app.rs  mod.rs  state.rs  types.rs
kolme/src/core/state/: event.rs  exec.rs  mod.rs
kolme/src/core/types/: balances.rs
kolme/src/state/: event.rs  exec.rs  framework.rs
kolme/tests/: auth.rs  offline-simple.rs
server/: .gitignore  Cargo.toml  TODO.md  justfile
server/.sqlx/: query-2084ff3681a4205cd0f6021e892cdb02ce8be9310544fed7ba03907c713b9dd4.json
server/migrations/: 1.up.sql
server/src/: app.rs  cli.rs  event.rs  framework_state.rs  kolme.rs  main.rs  prelude.rs  processor.rs  sample.rs  types.rs
shared/: Cargo.toml
shared/src/: cosmos.rs  cryptography.rs  lib.rs  types.rs
shared/src/cryptography/: cosmwasm.rs  real.rs
shared/src/types/: sqlx_impls.rs
solana/: Cargo.toml  docker-compose.yml  justfile
solana/crates/kolme-solana-bridge/: Cargo.toml
solana/crates/kolme-solana-bridge-client/: Cargo.toml
solana/crates/kolme-solana-bridge-client/src/: client.rs  lib.rs
solana/crates/kolme-solana-bridge/src/: lib.rs  tests.rs
solana/crates/solbox/: Cargo.toml
solana/crates/solbox/src/: bpf_loader_upgradeable.rs  lib.rs
solana/crates/testing/: Cargo.toml
solana/crates/testing/src/: lib.rs
solana/crates/testing/tests/: bridge_tests.rs
(+67 files in other folders)
