[workspace]
resolver = "2"
members = [
  "contracts/cosmos",
  "packages/examples/*",
  "packages/benchmarks",
  "packages/integration-tests",
  "packages/kolme",
  "packages/kolme-store",
  "packages/merkle-map",
  "packages/shared",
]

[workspace.dependencies]
tokio = { version = "1.43.0", features = ["full"] }
clap = { version = "4.5.20", features = ["derive", "env", "unicode"] }
cosmos = { git = "https://github.com/fpco/cosmos-rs", rev = "6f6fea0f7c04e4b64f5c091b006e4736dba1b10e", features = ["config"] }
fjall = "2.9.0"
hex = "0.4.3"
k256 = "0.13.4"
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
smallvec = { version = "1.13.2", default-features = false, features = ["serde"] }
jiff = { version = "0.2.3", features = ["serde"] }
rust_decimal = "1.37.1"
kolme = { path = "packages/kolme" }
kolme-store = { path = "packages/kolme-store" }
libp2p = { version = "0.55" }
merkle-map = { path = "packages/merkle-map" }
quickcheck = "1.0.3"
shared = { path = "packages/shared" }
lru = "0.14.0"

[workspace.lints.clippy]
unused_async = "deny"

[profile.release]
debug = 0
strip = "debuginfo"
lto = false
