[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Michael Snoyman <msnoyman@fpcomplete.com>", "FP Complete"]

[dependencies]

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
anyhow = "1"
reqwest = { version = "0.12.15", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
backon = "1.4.1"
kolme = { path = "../kolme" }
serde = "1.0.219"
cosmos = { git = "https://github.com/fpco/cosmos-rs", rev = "6f6fea0f7c04e4b64f5c091b006e4736dba1b10e", features = ["config"] }
shared = { path = "../shared", features = ["cosmwasm"] }
cosmwasm-std = "2.2.2"
serde_json = "1.0.140"
rust_decimal = "1.37.1"
tempfile = "3.19.1"
pretty_assertions = "1.4.1"
axum = { version = "0.8.3", features = ["ws"] }
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
