[package]
name = "server"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.20", features = ["derive", "env", "unicode"] }
cosmos = { git = "https://github.com/fpco/cosmos-rs", branch = "main" }
dotenvy = "0.15.7"
parking_lot = "0.12.3"
pid1 = "0.1.4"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "gzip", "http2", "brotli", "deflate"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["migrate", "runtime-tokio", "sqlite"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
