[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Michael Snoyman <msnoyman@fpcomplete.com>", "FP Complete"]

[features]
realcryptography = ["dep:k256", "dep:hex", "dep:rand"]
cosmwasm = ["dep:cosmwasm-std", "dep:cw-storage-plus"]

[dependencies]
cosmwasm-std = { version = "2", optional = true }
cw-storage-plus = { version = "2.0.0", optional = true }
hex = { version = "0.4.3", optional = true }
k256 = { version = "0.13.4", features = ["serde", "ecdsa", "sha256"], optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
snafu = "0.8.5"
sqlx = { version = "0.8.3", optional = true }
