[workspace]
resolver = "2"
members = [
  "crates/*",
]

[workspace.dependencies]
base64 = { version = "0.22.1", default-features = false }
bitflags = "2.9.0"
borsh = { version = "1.5.7", default-features = false }
kolme-solana-bridge-client = { path = "crates/kolme-solana-bridge-client" }
litesvm = "0.6.0"
litesvm-loader = "0.6.0"
litesvm-token = "0.6.0"
once_cell = { version = "1.21.1", default-features = false }
pinocchio = "0.9.2"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.4.0"
pinocchio-token = "0.4.0"
serde_json = "1"
sha_256 = "1.0.1"
shared = { path = "../packages/shared" }
smallvec = { version = "1.14.0", default-features = false }
solana-client = "2.2.7"
solana-commitment-config = "2.2.1"
solana-compute-budget-interface = "2.2.1"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = { version = "2.2", default-features = false }
solana-signature = "2.2.1"
solana-signer = "2.2"
solana-transaction = "2.2"
solana-transaction-error = "2.2.1"
solana-transaction-status-client-types = "2.2.7"
solbox = { path = "crates/solbox" }
spl-associated-token-account-client = "2.0.0"
spl-token-client = "0.14.0"
solana-loader-v3-interface = "5.0.0"
solana-sysvar = "2.2"

[profile.release.package.kolme-solana-bridge]
opt-level = 3
overflow-checks = true
incremental = false
codegen-units = 1
