[package]
name = "kolme-cosmos-bridge"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Michael Snoyman <msnoyman@fpcomplete.com>", "FP Complete"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "2" }
cw-storage-plus = "2.0.0"
shared = { workspace = true, features = ["chaincryptography", "cosmwasm"] }
sha2 = "0.10.8"
thiserror = "2.0.12"

[dev-dependencies]
hex = { workspace = true }
k256 = "0.13.4"
rand = "0.8.0"
shared = { workspace = true, features = ["realcryptography"] }
