[package]
name = "kolme-cosmos-bridge"
version = "0.1.0"
authors = ["FP Complete", "Michael Snoyman <msnoyman@fpcomplete.com>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw-storage-plus = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
shared = { workspace = true, features = ["chaincryptography", "cosmwasm"] }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
k256 = { workspace = true }
rand = { workspace = true }
shared = { workspace = true, features = ["realcryptography"] }
