[package]
name = "kolme-solana-bridge-client"
version = "0.1.0"
authors = ["FP Complete", "Michael Snoyman <msnoyman@fpcomplete.com>"]
edition = "2021"
license = "MIT"

[dependencies]
borsh = { workspace = true, features = ["derive"] }
shared = { workspace = true, features = ["realcryptography", "solana"] }
solana-compute-budget-interface = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true, features = ["curve25519", "std"] }
solana-signer = { workspace = true }
solana-transaction = { workspace = true, features = ["bincode"] }
spl-associated-token-account-client = { workspace = true }
