[package]
name = "kolme-solana-bridge"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Michael Snoyman <msnoyman@fpcomplete.com>", "FP Complete"]

[lib]
crate-type = ["cdylib", "lib"]

#[profile.release.build-override]
#lto = "fat"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = { version = "1.5.5", default-features = false }
solbox = { path = "../solbox" }
kolme-solana-bridge-client = { path = "../kolme-solana-bridge-client", default-features = false }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }

[dev-dependencies]
litesvm = "0.6.0"
litesvm-token = "0.6.0"
kolme-solana-bridge-client = { path = "../kolme-solana-bridge-client" }
solana-transaction-error = "2.2.1"
solana-account = "2.2"
solana-keypair = "2.2"
solana-signer = "2.2"
solana-transaction = "2.2"
solana-instruction = "2.2"
solana-hash = "2.2"
solana-message = "2.2"
solana-pubkey = "2.2"
spl-associated-token-account-client = "2.0.0"
k256 = "0.13.4"
sha_256 = "1.0.1"
