[package]
name = "kolme-solana-bridge"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Michael Snoyman <msnoyman@fpcomplete.com>", "FP Complete"]

[lib]
crate-type = ["cdylib", "lib"]

#[profile.release.build-override]
#lto = "fat"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = { version = "1.5.7", default-features = false }
solbox = { path = "../solbox" }
shared = { path = "../../../packages/shared", default-features = false, features = ["chaincryptography", "solana"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
serde_json = "1"
