[package]
name = "kolme-solana-bridge"
version = "0.1.0"
authors = ["FP Complete", "Michael Snoyman <msnoyman@fpcomplete.com>"]
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

# [profile.release.build-override]
# lto = "fat"

[dependencies]
base64 = { workspace = true, features = ["alloc"] }
borsh = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true, features = ["chaincryptography", "solana"] }
solbox = { workspace = true }

[features]
cpi = ["no-entrypoint"]
default = []
no-entrypoint = []
