[package]
name = "solbox"
version = "0.1.0"
authors = ["FP Complete", "Michael Snoyman <msnoyman@fpcomplete.com>"]
edition = "2021"
license = "MIT"

[dependencies]
bitflags = { workspace = true }
borsh = { workspace = true }
once_cell = { workspace = true }
pinocchio = { workspace = true }
pinocchio-pubkey = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
smallvec = { workspace = true, features = [
  "const_generics",
  "const_new",
  "union",
] }
bincode = "1.3.3"
# Match the anza-xyz deps
serde = "1.0.217"
serde_derive = "1.0.217"

[dev-dependencies]
solana-loader-v3-interface = { workspace = true, features = ["serde"] }
