[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
litesvm = "0.6.0"
litesvm-token = "0.6.0"
shared = { path = "../../../packages/shared", features = ["realcryptography", "solana"] }
kolme-solana-bridge-client = { path = "../kolme-solana-bridge-client" }
solana-transaction-error = "2.2.1"
sha_256 = "1.0.1"
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
borsh = { version = "1.5.7", default-features = false }
