[package]
name = "testing"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { workspace = true, features = ["alloc"] }
borsh = { workspace = true }
kolme-solana-bridge-client = { workspace = true }
litesvm = { workspace = true }
litesvm-token = { workspace = true }
sha_256 = { workspace = true }
shared = { workspace = true, features = ["realcryptography", "solana"] }
solana-transaction-error = { workspace = true }
